# CG2022

./: .gitignore  README.md
3D/: box.3d  cone.3d  plane.3d  sphere.3d  sphere19.3d  sphere1920.3d  teapot.3d
Fase01/CG2022-TP1-GR11/: README.txt
Fase01/CG2022-TP1-GR11/3D/: cone.3d  plane.3d  sphere.3d
Fase01/CG2022-TP1-GR11/engine/: engine.cpp
Fase01/CG2022-TP1-GR11/generator/: CMakeLists.txt  cone.h  sphere.cpp
Fase01/CG2022-TP1-GR11/models/: box.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  (+1 more)
Fase02/CG2022-Fase2-GR11/: README.txt
Fase03/: README.txt
Fase04/: README.txt
SolarSystem/: SolarSystem.xml  box_NL.xml  cone_dir.xml  sphere_NL.xml  test1.xml  test2.xml  test3.xml  test4.xml
engine/: CMakeLists.txt  SolarSystem.xml  engine.cpp
engine/headers/: camera.h  color.h  figures.h  lights.h  primitive.h  rgb.h  solarSystemReader.h  translation.h  xmlparser.h
engine/models/: figures.cpp  figures.h  primitive.cpp  primitive.h
engine/solarSystem/: orbit.cpp  orbit.h  solarSystemReader.cpp  solarSystemReader.h  specs.h
engine/src/: engine.cpp  primitive.cpp
engine/utils/: camera.cpp  camera.h  scene.cpp  scene.h  xmlparser.cpp  xmlparser.h
generator/: CMakeLists.txt  box.cpp  box.h  cone.cpp  cone.h  generator.cpp  plane.cpp  plane.h  sphere.cpp  sphere.h
generator/headers/: cone.h  patch.h  plane.h  sphere.h
generator/src/: box.cpp  cone.cpp  generator.cpp  patch.cpp  plane.cpp  sphere.cpp
models/: box.xml  cone.xml  plane.xml  sphere.xml  xml.xml
utils/: point_2d.cpp  point_2d.h  point_3d.cpp  point_3d.h  polar.cpp  polar.h
(+92 files in other folders)
